# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in (chemical/x-cif)
	(chemical/x-mmcif): Fixed acronym explanation for 'CIF'. Changed
	Comment.
	(chemical/x-mdl-molfile, chemical/x-mdl-rdfile, chemical/x-mdl-rxnfile)
	(chemical/x-mdl-sdfile, chemical/x-mdl-tgf): Added acronym and
	explanation for 'MDL'.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* NEWS: Added items for next version 0.1.93.

	* src/chemical-mime-database.xml.in: Small DTD change to support a
	package attribute for the application element. Added support for
	chemical/x-gamess-input and chemical/x-mopac-out. Added application
	elements for xdrawchem and molden, where I missed them before, and
	initially added the application elements for gchem3d-viewer.

	* xsl/cmd_freedesktop_org.xsl: Better use the <xsl:element> element
	instead of the element to print.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* acinclude.m4: Added MP_PROG_XMLLINT macro to make xmllint available
	for 'check' target.

	* configure.ac: Ditto.

	* src/Makefile.am: Added check target to make sure, that the resulting
	database follows our own document declaration.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* xsl/cmd_kde.xsl: Fixed header.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* NEWS: Fixed typo. Added a new entry for the next release.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* configure.ac (AC_PACKAGE_VERSION): Post-release version bump to
	0.1.93.

	* Makefile.am (EXTRA_DIST): Fixed a bug. The resulting .pc file should
	not be shipped with the 'dist' target.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* configure.ac: Bump to version 0.1.92.

	* NEWS: Ditto.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* NEWS: Added information about latest release.
